src/objects/fferpcore__SequenceComplete__e.object
<CustomObject>
    <fields>
        <fullName>fferpcore__IsContinuation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Diagnostic indication that this event was generated by the request handler splitting a large completion response.</description>
        <label>Is Continuation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__NumberOfEventsProcessed__c</fullName>
        <description>Diagnostic information giving the number of SequenceRequests passed to the subscriber to process.</description>
        <label>Number Of Events Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__Overflowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that too many records were requested resulting in a second request being generated to perform the remainder.</description>
        <label>Overflowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__SubjectIds__c</fullName>
        <description>Comma separated list or JSON array of record IDs which were sequenced.</description>
        <label>SubjectIds</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Sequence Complete Event</label>
    <pluralLabel>Sequence Complete Events</pluralLabel>
</CustomObject>